# dl-myo

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  driver.py  pyproject.toml
.github/workflows/: build.yml  codecov.yml  docker-push.yml  docker.yml  pypi.yml  python-publish.yml  release-package.yml
examples/: data.csv  driver.py  file_name4.csv  g_ian_fist_no_wrist.csv  g_ian_two_pinch_no_wrist.csv  g_ian_two_pinch_wrist.csv  ian_test_file.py  live_classifying.py  live_plotting.py  location.keras  sample.py  sample_client.py  save_weights.keras  test-03242024.csv  ws_client.py  ws_server.py
examples/03212024_data/: g_ian_fist_wrist.csv  g_ian_rest_no_wrist.csv  g_ian_rest_wrist.csv  g_ian_two_pinch_no_wrist.csv
examples/influxdb/: influx_client.py
examples/ydf_model_v1/: data_spec.pb  gradient_boosted_trees_header.pb  header.pb  nodes-00000-of-00001
myo/: __init__.py  client.py  command.py  commands.py  constants.py  core.py  device.py  handle.py  profile.py  state.py  types.py  utils.py
tests/: test_myo_types.py
tests/data/: classifier_event.csv  fv_data.csv  imu_data.csv  motion_event.csv
tests/test_myo/: test_client.py  test_types.py
tests/test_myo/test_data/: emg_data.csv
